--- a/manifest.json
+++ b/manifest.json
@@ -1,48 +1,16 @@
 {
   "name": "Doorvi - Interfone Inteligente",
   "short_name": "Doorvi",
-  "description": "Sistema de interfone inteligente para videochamadas",
-  "start_url": "/morador.html",
-  "scope": "/",
+  "description": "Sistema de interfone inteligente para moradores e visitantes.",
+  "start_url": "./morador.html",
   "display": "standalone",
   "background_color": "#0a0e27",
   "theme_color": "#0a0e27",
-  "orientation": "portrait",
+  "orientation": "portrait-primary",
   "icons": [
-    {
-      "src": "icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
     {
       "src": "icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icons/icon-384x384.png",
-      "sizes": "384x384",
       "type": "image/png"
     },
     {
